core team problem

--- a/english.html
+++ b/english.html
@@ -68,24 +68,14 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#schedule_survival">Schedule/Survival Guide</a>
                 </li>
-                <!--<li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#core_team">Core Team</a>
                 </li>
-				<li class="nav-item">
+				<!--<li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#parceiros">Partners</a>
                 </li>-->
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " target="_self" href="index.html">
-                        <button type="button" class=" navbar-toggle multilingual" data-toggle="collapse" data-target=".navbar-collapse">
-                        PT
-                        <span class="sr-only">Toon/verberg navigatie</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                      </button></a>
                 </li>
             </ul>
             
@@ -351,7 +341,7 @@
     </div>
 </section>
 
-<!--Core Team
+<!--Core Team-->
 
 <section id="core_team" class="section fill">
     <div class="container team-size">
@@ -368,25 +358,25 @@
 			<div class="col-sm-4 team-central">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Flavia.png" alt="">
+                            <img class="img-responsive" src="img/ct/Gabriel.jpg" alt="">
                         </div>
                         <div class="team-desc">
-							<h4>Flávia Carvalhido</h4>
+							<h4>Gabriel Machado Jr.</h4>
                             <span>Main Organizer</span>
                         </div>
                     </div>
                 </div>
 			</div>
-		</div>comment //end row
+		</div><!--//end row-->
         <div class="col-centered">
             <div class="row ">
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Marques.png" alt="">
+                            <img class="img-responsive" src="img/ct/Joana.jpg" alt="">
                         </div>
                         <div class="team-desc">
-                            <h4>David Marques</h4>
+                            <h4>Joana Sousa</h4>
                             <span>Academical Responsible</span>
                         </div>
                     </div>
@@ -394,10 +384,10 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Joao.png" alt="">
+                            <img class="img-responsive" src="img/ct/Meireles.jpg" alt="">
                         </div>
                         <div class="team-desc">
-                            <h4>João Carvalhal</h4>
+                            <h4>Rita Meireles</h4>
                             <span>Secretary</span>
                         </div>
                     </div>
@@ -405,26 +395,26 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Margarida.png" alt="">
+                            <img class="img-responsive" src="img/ct/Marques.jpg" alt="">
                         </div>
                         <div class="team-desc">
-                            <h4>Margarida Mendonça</h4>
+                            <h4>Rita Marques</h4>
                             <span>Participants Responsible</span>
                         </div>
                     </div>
                 </div>
                 
             </div>
-        </div>comment //end row
+        </div><!--//end row-->
         <div class="col-centered">
             <div class="row ">
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Lipi.png" alt="">
+                            <img class="img-responsive" src="img/ct/Carolina.jpg" alt="">
                         </div>
                         <div class="team-desc">
-                            <h4>Filipe Ventura</h4>
+                            <h4>Carolina Saraiva</h4>
                             <span>Marketing Responsible</span>
                         </div>
                     </div>
@@ -432,10 +422,10 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Isabel.png" alt="">
+                            <img class="img-responsive" src="img/ct/Andre.jpg" alt="">
                         </div>
                         <div class="team-desc">
-                            <h4>Isabel Almeida</h4>
+                            <h4>André Teixeira</h4>
                             <span>Grants & Corporate Relations Responsible</span>
                         </div>
                     </div>
@@ -443,20 +433,20 @@
 				<div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Alvaro.png" alt="">
+                            <img class="img-responsive" src="img/ct/Joao.jpg" alt="">
                         </div>
                         <div class="team-desc">
-                            <h4>Álvaro Pêgas</h4>
+                            <h4>João Vale</h4>
                             <span>Logistics Responsible</span>
                         </div>
                     </div>
                 </div>                
             </div>
-        </div>comment //end row
+        </div><!--//end row-->
     </div>
     </div>
 </section>
--->
+
 
 <!--Parceiros
 
