--- a/english.html
+++ b/english.html
@@ -358,7 +358,7 @@
 			<div class="col-sm-4 team-central">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Gabriel.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/Gabriel.jpeg" alt="">
                         </div>
                         <div class="team-desc">
 							<h4>Gabriel Machado Jr.</h4>
@@ -373,7 +373,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Joana.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/Joana.jpeg" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>Joana Sousa</h4>
@@ -384,7 +384,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Meireles.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/Meireles.jpeg" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>Rita Meireles</h4>
@@ -395,7 +395,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Marques.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/Marques.jpeg" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>Rita Marques</h4>
@@ -411,7 +411,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Carolina.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/Carolina.jpeg" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>Carolina Saraiva</h4>
@@ -422,7 +422,7 @@
                 <div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Andre.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/Andre.jpeg" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>André Teixeira</h4>
@@ -433,7 +433,7 @@
 				<div class="col-sm-4">
                     <div class="team-members">
                         <div class="team-avatar">
-                            <img class="img-responsive" src="img/ct/Joao.jpg" alt="">
+                            <img class="img-responsive" src="img/ct/Joao.jpeg" alt="">
                         </div>
                         <div class="team-desc">
                             <h4>João Vale</h4>
