--- a/english.html
+++ b/english.html
@@ -353,7 +353,7 @@
                 </div>
             </div>
         </div>
-		<div class="col-centered">
+		<div class="col">
             <div class="row ">
 			<div class="col-sm-4 team-central">
                     <div class="team-members">
