--- a/english.html
+++ b/english.html
@@ -556,7 +556,7 @@
                 <div class="col-lg-6 text-center">
                     <h2 class="section-heading">Pax Responsible</h2>
                     <p>
-                        <a class="text-white" href="mailto:cx.rmarques@gmail.com">cx.rmarques@gmail.com</a>
+                        <a class="text-white" href="mailto:rita.marques@bestporto.org">rita.marques@bestporto.org</a>
                     </p>
                 </div>
             </div>
