--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a class="nav-link js-scroll-trigger" href="#location">Location</a>
                 </li>
 				<li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#safety">Safety</a>
+                    <a class="nav-link js-scroll-trigger" href="#safety">COVID-19</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#schedule_survival">Schedule/Survival Guide</a>
@@ -162,7 +162,7 @@
         <div class="row">
             <div class="col-lg-6 text-center" style="margin-top:5px; min-height:50vh">
                 <div class="aspect-ratio">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/dVCHcU--9aI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Vb3nDypGffM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-lg-6 text-center team-central">
@@ -207,12 +207,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6 text-center" style="padding-bottom:20px">
+            <div class="col-lg-12 text-center" style="padding: 30px;">
                 <a class="btn btn-blue btn-light btn-xl btn-xl sr-button"
                 href="https://best.eu.org/courses/list.jsp">Apply here</a>
-            </div>
-            <div class="col-lg-6 text-center">
-                <a class="btn btn-blue btn-light btn-xl sr-button" target="_blank"href="">Regulation</a>
             </div>
         </div>
     </div>
@@ -268,7 +265,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto text-center boxSafety">
-                <h2 class="section-heading text-black">SAFETY MEASURES</h2>
+                <h2 class="section-heading text-black">COVID-19 SAFETY MEASURES</h2>
                 <hr class="my-4">
                 <p class="text-black mb-4" align="justify">
                  In order to ensure to the maximum the security of the participants and the organizers during the event, we adapted this edition through various measures, including:
@@ -295,13 +292,14 @@
                 <hr class="light my-4">
                 <p class="mb-4">Get to know the schedule and the activities we have for you.</p>
                 <a class="btn btn-light btn-xl sr-button" target="_blank"
-                   href="">Open schedule</a>
+                   href="https://drive.google.com/file/d/1Ri50vniU1LEvDme089_QqncWgNxqeV87/view?usp=sharing">Open Schedule</a>
             </div>
             <div class="col-lg-6 text-center">
                 <h2 class="section-heading">SURVIVAL GUIDE</h2>
                 <hr class="light my-4">
                 <p class="mb-4">Don't get lost in Porto!</p>
-                <a class="btn btn-light btn-xl sr-button" target="_blank"href="">Open Survival Guide</a>
+                <a class="btn btn-light btn-xl sr-button" target="_blank"
+                href="https://drive.google.com/file/d/1zDqlXWfq_jsswhemdxs4LXNl5AHrUxP0/view?usp=sharing">Open Survival Guide</a>
             </div>
         </div>
         <div class="row" style="padding-top:5vh;">
