added BEST Courses logo and new teaser with BEST Courses logo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" style="margin-left:5rem" href="#page-top"><img src="img/2020/logobest2.png" width="100%"></a>
+        <a class="navbar-brand js-scroll-trigger" style="margin-left:3rem" href="http://bestporto.org/" target="_blank"><img src="img/2020/logobest2.png" width="100%"></a>
+        <a class="navbar-brand js-scroll-trigger" style="margin-left:5rem" href="https://best.eu.org/courses/welcome.jsp" target="_blank"><img src="img/logobestcourse.png" width="100%"></a>
 		<!-- multilingual-->
 		
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
@@ -54,6 +55,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#about_course">About the course</a>
                 </li>
@@ -162,7 +166,9 @@
         <div class="row">
             <div class="col-lg-6 text-center" style="margin-top:5px; min-height:50vh">
                 <div class="aspect-ratio">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Vb3nDypGffM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/9N2DUj-QOCo" 
+                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                    encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>               
                 </div>
             </div>
             <div class="col-lg-6 text-center team-central">
