--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 </section>
 
 <!-- Location -->
-<section id="location" class="bg-image text-white jumbotron vertical-center "
+<section id="location" class="bg-image text-white jumbotron vertical-center fill"
          style="background-image:url(img/porto2.jpg);">
     <div class="container transparent-box ">
         <div class="row">
@@ -508,7 +508,7 @@
             <div class="col-lg-8 mx-auto text-center">
                 <h2 class="section-heading">CONTACT US</h2>
                 <hr class="light my-4">
-                <p class="mb-5">Do you still have quetions? Send us an email!</p>
+                <p class="mb-5">Do you still have questions? Send us an email!</p>
             </div>
         </div>
         <div class="row">
